forgotten shop ui tweaks